Fix spacing and responsive issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,9 @@ body {
   font-style: normal;
 }
 
-// Fix spacing issues on message section
-.msg p {
-  margin-top: 0;
-}
+/* Fix spacing issues on message section */
 
-p {
+.msg p {
   margin-top: 0;
 }
 
@@ -57,7 +54,7 @@ main {
 }
 
 .main-box {
-  width: 90%;
+  width: 75%;
   background-color: white;
   border-radius: 10px;
   padding: 15px 30px;
@@ -205,3 +202,5 @@ hr {
     margin-right: 200px;
   }
 }
+
+
